k8s - don't use a mounted local volume for the app's code

--- a/kubernetes/local/deployment.yml
+++ b/kubernetes/local/deployment.yml
@@ -21,9 +21,9 @@ spec:
         app: libraries
     spec:
       volumes:
-        - name: code
-          persistentVolumeClaim:
-            claimName: code-pv-volumeclaim-app
+        # - name: code
+        #   persistentVolumeClaim:
+        #     claimName: code-pv-volumeclaim-app
         - name: scripts
           configMap:
             name: scripts
@@ -44,8 +44,8 @@ spec:
             - containerPort: 8000
 
           volumeMounts:
-            - name: code
-              mountPath: /app/libraries
+            # - name: code
+            #   mountPath: /app/libraries
             - name: scripts
               mountPath: /scripts
 
