--- a/kubernetes/local/service.yml
+++ b/kubernetes/local/service.yml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: libraries
+  labels:
+    app: libraries
 spec:
   selector:
     app: libraries
   type: NodePort
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 80
+    port: 3000
+    targetPort: 3000
