k8s - working locally now, update notes, improve docs scripts
- add some todos to the local k8s notes
- syntax error in setup.sh mixing up fish and bash 'not'
- sync.fish should start Postgres for you if it's not running
- make service/libraries port 8000 for now, Portal uses 3000 because
they overwrite manage.py to include a debugging tool that runs on
port 3000 but we don't need that initially
- reduce postgres container resource requests

--- a/kubernetes/local/postgres/deployment.yaml
+++ b/kubernetes/local/postgres/deployment.yaml
@@ -34,7 +34,8 @@ spec:
               memory: 1024Mi
               cpu: "1"
             requests:
-              memory: 1024Mi
+              memory: 500Mi
+              cpu: "0.5"
       volumes:
         - name: postgredb
           persistentVolumeClaim:
