k8s - tested, fixed docs/dev.fish script to start/stop local dev

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -17,6 +17,7 @@ profiles:
     # https://skaffold.dev/docs/environment/profiles/#activation
     activation:
       - command: build
+      - command: deploy
       - command: dev
       - command: delete
     build:
