--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -1,46 +1,68 @@
-bcrypt==3.1.7
+autopep8==1.6.0
+bcrypt==3.2.0
 beautifulsoup4==4.8.2
-certifi==2021.5.30
-cffi==1.14.6
-chardet==4.0.0
-cryptography==3.2.1
+Brotli==1.0.9
+cachetools==4.2.4
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cryptography==36.0.2
+dj-database-url==0.5.0
 Django==2.2.24
-dj-database-url<0.6
 django-cas-ng==4.1.1
 django-extensions==2.2.8
+django-filter==2.4.0
 django-managepy-anywhere==2.0
-django-modelcluster==5.1
-django-storages[google]==1.7.1
-django-taggit==1.3.0
-django-treebeard==4.3.1
-djangorestframework==3.12.4
+django-modelcluster==5.3
+django-storages==1.7.1
+django-taggit==1.5.1
+django-treebeard==4.5.1
+djangorestframework==3.13.1
 djangorestframework-simplejwt==4.3.0
 draftjs-exporter==2.1.7
 elasticsearch==5.4.0
+et-xmlfile==1.1.0
+google-api-core==2.7.2
+google-auth==2.6.5
+google-cloud-core==2.3.0
+google-cloud-storage==2.0.0
+google-crc32c==1.3.0
+google-resumable-media==2.3.2
+googleapis-common-protos==1.56.0
 html5lib==1.1
-idna==2.10
+idna==3.3
 l18n==2018.5
-lxml==4.6.3
+lxml==4.8.0
 olefile==0.46
-paramiko==2.7.2
+openpyxl==3.0.9
+paramiko==2.10.3
 Pillow==7.2.0
+protobuf==3.19.4
 psycopg2-binary==2.8.4
-pycparser==2.20
-PyJWT==1.7.1
-PyNaCl==1.4.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
+pycparser==2.21
+PyJWT==2.3.0
+PyNaCl==1.5.0
 pysftp==0.2.9
-python-cas==1.5.0
-pytz==2021.1
-requests==2.25.1
+python-cas==1.6.0
+pytz==2022.1
+requests==2.27.1
+rsa==4.8
 six==1.16.0
 soupsieve==1.9.5
 sqlparse==0.4.2
-Unidecode==1.3.1
-urllib3==1.26.6
-uwsgi==2.0.20
-wagtail==2.9.3
+tablib==3.1.0
+toml==0.10.2
+Unidecode==1.3.4
+urllib3==1.26.9
+uWSGI==2.0.20
+wagtail==2.10.2
 webencodings==0.5.1
-Willow==1.3
+whitenoise==5.2.0
+Willow==1.4.1
+xlrd==2.0.1
 XlsxWriter==1.4.5
+xlwt==1.3.0
 xmltodict==0.12.0
-whitenoise[brotli]==5.2.0
