--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+autopep8 = "*"
 
 [packages]
 django = "==2.2.24"
@@ -16,7 +17,7 @@ l18n = "==2018.5"
 olefile = "==0.46"
 psycopg2-binary = "==2.8.4"
 soupsieve = "==1.9.5"
-wagtail = "==2.11.9"
+wagtail = "==2.12.6"
 xmltodict = "==0.12.0"
 django-storages = {version = "==1.7.1", extras = ["google"]}
 uwsgi = "==2.0.20"
