--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -233,7 +233,7 @@ spec:
           secret:
             secretName: cloudsql-instance-credentials
         - name: cloudsql
-          emptyDir:
+          emptyDir: {}
 
 ---
 # A service to allow external connections.  This accepts connections from inside
