--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -19,6 +19,7 @@ rules:
         -
           size: 4
     mixins-before-declarations: 0
+    no-qualifying-elements: 0
     selector-format: 0
     space-between-parens: 0
     variable-name-format: 0
