gitlab - tag the docker_image_prod task so the new group CI runner uses it

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,9 @@ docker_image_staging:
 docker_image_prod:
   image: "docker:18.09.7"
   stage: build
+  tags:
+  - build
+  - production
   rules:
     - if: "$CI_COMMIT_REF_NAME =~ /^release-*/"
       when: always
