quiet uwsgi logs, too much useless info in log viewer
ref #3

--- a/kubernetes/uwsgi.ini
+++ b/kubernetes/uwsgi.ini
@@ -1,6 +1,7 @@
 [uwsgi]
 
 # Basic configuration.
+# https://uwsgi-docs.readthedocs.io/en/latest/Options.html
 strict = true
 master = true
 workers = 2
@@ -15,6 +16,11 @@ thunder-lock = true
 pcre-jit = true
 log-x-forwarded-for = true
 http-socket = :8000
+
+# disable the incredibly noisy uwsgi logs
+disable-logging = true
+log-4xx = true
+log-5xx = true
 
 # Application configuration.
 chdir = /app
