increase uwsgi buffer size

--- a/kubernetes/uwsgi.ini
+++ b/kubernetes/uwsgi.ini
@@ -16,7 +16,8 @@ thunder-lock = true
 pcre-jit = true
 log-x-forwarded-for = true
 http-socket = :8000
-
+# to address repeated warnings in logs
+buffer-size = 32768
 # Application configuration.
 chdir = /app
 # serving files like this does not work (throws 500 errors)
