--- a/Pipfile
+++ b/Pipfile
@@ -11,14 +11,13 @@ autopep8 = "*"
 # @TODO updates:
 # Wagtail 2.15 & 2.16
 # elasticsearch
-# uwsgi
 django = "==3.2.15"
 django-cas-ng = "==4.3.0"
 django-extensions = "==3.1.5"
 djangorestframework-simplejwt = "==5.2.0"
 elasticsearch = "==5.4.0"
 l18n = "==2021.3"
-psycopg2-binary = "==2.8.4"
+psycopg2 = "==2.9.3"
 wagtail = "==2.14.2"
 xmltodict = "==0.13.0"
 uwsgi = "==2.0.20"
