--- a/kubernetes/production.yaml
+++ b/kubernetes/production.yaml
@@ -291,7 +291,7 @@ metadata:
   name: summon-sftp
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
 spec:
-  # run daily
+  # run daily at 2am (UTC) / 7pm PT
   schedule: "2 0 * * *"
   failedJobsHistoryLimit: 2
   successfulJobsHistoryLimit: 2
@@ -354,7 +354,7 @@ metadata:
   name: instagram
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
 spec:
-  # run daily
+  # run daily at midnight (UTC) / 5pm PT
   schedule: "0 0 * * *"
   failedJobsHistoryLimit: 2
   successfulJobsHistoryLimit: 2
@@ -409,3 +409,56 @@ spec:
                     secretKeyRef:
                       name: instagram-secret
                       key: app-id
+
+---
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: publish-scheduled-pages
+  namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
+spec:
+  # run hourly at half-past
+  schedule: "30 * * * *"
+  failedJobsHistoryLimit: 2
+  successfulJobsHistoryLimit: 2
+  # ttlSecondsAfterFinished: 900
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: Never
+          containers:
+            - name: summon
+              image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              imagePullPolicy: Always
+              args:
+                - python
+                - libraries/manage.py
+                - publish_scheduled_pages
+              # Env variables form ConfigMap
+              envFrom:
+                - configMapRef:
+                    name: app
+              env:
+                - name: SECRET_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      name: secret-key
+                      key: key
+                - name: DB_USER
+                  valueFrom:
+                    secretKeyRef:
+                      name: cloudsql-db-credentials
+                      key: username
+                - name: DB_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: cloudsql-db-credentials
+                      key: password
+                - name: DATABASE_URL
+                  value: postgres://$(DB_USER):$(DB_PASSWORD)@cloudsqlproxy:5432/$(DB_NAME)
+                - name: GS_CREDENTIALS
+                  valueFrom:
+                    secretKeyRef:
+                      name: cloud-storage-credentials
+                      key: credentials
