--- a/kubernetes/production.yaml
+++ b/kubernetes/production.yaml
@@ -428,8 +428,8 @@ spec:
         spec:
           restartPolicy: Never
           containers:
-            - name: summon
-              image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+            - name: publish-scheduled-pages
+              image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
               imagePullPolicy: Always
               args:
                 - python
