--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -434,7 +434,7 @@ spec:
         spec:
           restartPolicy: Never
           containers:
-            - name: summon
+            - name: publish-scheduled-pages
               image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
               imagePullPolicy: Always
               args:
