k8s - update ingress apiVersion to networking.k8s.io/v1
in anticipation of k8s 1.22 upgrade

--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -261,7 +261,7 @@ spec:
 ## Ingress to configure external connections.  On GKE, this will create a GCP
 ## HTTP load balancer.  These are charged *per ingress* so be careful when
 ## creating new ones.
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress
