--- a/kubernetes/production.yaml
+++ b/kubernetes/production.yaml
@@ -289,6 +289,9 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
+          labels:
+            app: libraries
         spec:
           restartPolicy: Never
           containers:
@@ -341,6 +344,9 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
+          labels:
+            app: libraries
         spec:
           restartPolicy: Never
           containers:
@@ -405,6 +411,9 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
+          labels:
+            app: libraries
         spec:
           restartPolicy: Never
           containers:
