--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -302,7 +302,7 @@ spec:
           containers:
             - name: summon
               image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
-              imagePullPolicy: Always
+              imagePullPolicy: IfNotPresent
               args:
                 - python
                 - libraries/manage.py
@@ -358,7 +358,7 @@ spec:
           containers:
             - name: instagram
               image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
-              imagePullPolicy: Always
+              imagePullPolicy: IfNotPresent
               args:
                 - python
                 - libraries/manage.py
@@ -425,7 +425,7 @@ spec:
           containers:
             - name: publish-scheduled-pages
               image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
-              imagePullPolicy: Always
+              imagePullPolicy: IfNotPresent
               args:
                 - python
                 - libraries/manage.py
