fix eslint config, convert gulpfile tabs to spaces

--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     },
     "extends": "eslint:recommended",
     "rules": {
+      "globals": {
+        "require": true
+      },
       "indent": [
         "error",
-        "space"
+        4
       ],
       "linebreak-style": [
         "error",
