--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -285,9 +285,9 @@ metadata:
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
 spec:
   # run at convenient times for testing, not the same as prod
-  schedule: "45 1 * * *"
+  # schedule: "45 1 * * *"
   # default when not testing this job: run once on January 1st
-  # schedule: "0 0 1 1 *"
+  schedule: "0 0 1 1 *"
   failedJobsHistoryLimit: 2
   successfulJobsHistoryLimit: 2
   # https://kubernetes.io/docs/concepts/workloads/controllers/job/#clean-up-finished-jobs-automatically
