--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules/
 libraries/libraries/settings/local.py
 # k8s secrets, used in local/kustomize.yml secretGenerator
 secrets.env
+cdi_cca.key
 
 # ignore all type of static files
 libraries/logs/*
