--- a/kubernetes/local/kustomization.yml
+++ b/kubernetes/local/kustomization.yml
@@ -17,6 +17,12 @@ resources:
 secretGenerator:
   - name: app-secrets
     env: secrets.env
+    # these files facilitate the summon_deletes mgmt cmd and are copied to /root/.ssh
+    # by a volume on the pod definition (see deployment.yml for how it's done locally)
+  - name: summon-sftp-secrets
+    files:
+      - assets/cdi_cca.key
+      - assets/known_hosts
 
 configMapGenerator:
   - name: scripts
