--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -286,7 +286,7 @@ metadata:
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
 spec:
   # run at convenient times for testing, not the same as prod
-  schedule: "7 20 * * *"
+  schedule: "20 20 * * *"
   # default when not testing this job: run once on January 1st
   # schedule: "0 0 1 1 *"
   failedJobsHistoryLimit: 2
@@ -314,7 +314,7 @@ spec:
                 - python
                 - libraries/manage.py
                 - summon_deletes
-              volumeMount:
+              volumeMounts:
                 - name: summon-sftp-secrets
                   readOnly: true
                   mountPath: /root/.ssh
