--- a/kubernetes/staging.yaml
+++ b/kubernetes/staging.yaml
@@ -232,7 +232,7 @@ spec:
           secret:
             secretName: cloudsql-instance-credentials
         - name: cloudsql
-          emptyDir:
+          emptyDir: {}
 
 ---
 # A service to allow external connections.  This accepts connections from inside
