GSB media for local development, closes #33

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ libraries/libraries/settings/local.py
 # k8s secrets, used in local/kustomize.yml secretGenerator
 secrets.env
 cdi_cca.key
+local-gsb-sa.json
 
 # ignore all type of static files
 libraries/logs/*
