--- a/kubernetes/local/deployment.yml
+++ b/kubernetes/local/deployment.yml
@@ -71,3 +71,8 @@ spec:
           env:
             - name: DATABASE_URL
               value: postgres://postgresadmin:admin123@postgres.libraries-wagtail:5432/cca_libraries
+            - name: GS_CREDENTIALS
+              valueFrom:
+                secretKeyRef:
+                  key: local-gsb-sa.json
+                  name: gsb-service-account
