--- a/kubernetes/local/configMap.yml
+++ b/kubernetes/local/configMap.yml
@@ -13,6 +13,10 @@ data:
   ES_URL: http://elasticsearch.libraries-wagtail:9200
   ES_INDEX_PREFIX: libraries_wagtail
 
+  # Static files stored in Google Cloud
+  # also requires GS_CREDENTIALS in secrets.env file
+  GS_BUCKET_NAME: libraries-media-local
+
   # Media
   MEDIA_URL: /media/
   MEDIA_ROOT: /app/media/
