--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ dj-database-url = "==1.2.0"
 whitenoise = {version = "==6.3.0", extras = ["brotli"]}
 pysftp = "==0.2.9"
 django-storages = {version = "==1.13.2", extras = ["google"]}
+certifi = "*"
 
 [requires]
 python_version = "3.7.13"
