--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   },
   "homepage": "https://github.com/cca/libraries_wagtail#readme",
   "dependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "autoprefixer": "^10.4.14",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "autoprefixer": "^10.4.15",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
-    "node-sass": "^8.0.0",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.28",
+    "sass": "^1.66.0"
   },
   "devDependencies": {
     "sass-lint": "^1.13.1"
