--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -169,7 +169,7 @@ spec:
           resources:
             limits:
               memory: 512Mi
-              cpu: 1
+              cpu: "1"
             requests:
               memory: 512Mi
 
@@ -215,7 +215,7 @@ spec:
           resources:
             limits:
               memory: 1024Mi
-              cpu: 1
+              cpu: "1"
             requests:
               memory: 512Mi
       volumes:
