--- a/kubernetes/production.yaml
+++ b/kubernetes/production.yaml
@@ -169,6 +169,7 @@ spec:
           # This can be raised if necessary, but make sure the cluster is large
           # enough or the application won't deploy.
           resources:
+            # @TODO CPU limits
             limits:
               memory: 512Mi
             requests:
@@ -203,12 +204,13 @@ spec:
             [
               "/cloud_sql_proxy",
               "--dir=/cloudsql",
-              "-instances=cca-web-0:us-west1:cca-edu-prod-1=tcp:0.0.0.0:5432",
+              "-instances=cca-web-0:us-west1:psql14-instance=tcp:0.0.0.0:5432",
               "-credential_file=/secrets/cloudsql/credentials.json",
             ]
           ports:
             - name: postgresql
               containerPort: 5432
+          # @TODO resource limits, see qa.yaml for example
           volumeMounts:
             - name: cloudsql-instance-credentials
               mountPath: /secrets/cloudsql
